fix: fix height scrollbar

--- a/src/assets/styles/common/base.scss
+++ b/src/assets/styles/common/base.scss
@@ -19,6 +19,7 @@ body,
 main {
   ::-webkit-scrollbar {
     height: 0.5rem;
+    width: 0.5rem;
   }
 
   ::-webkit-scrollbar-thumb {
